src/objects/APTS_Batch_Jobs__mdt.object
<CustomObject>
    <description>Jobs that needs to Run using Comman batch Handeler can be configured in this Custom Metadata</description>
    <fields>
        <fullName>APTS_Batch_Class_Name__c</fullName>
        <label>Batch Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Next_Jobs__c</fullName>
        <label>Next Jobs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Query__c</fullName>
        <label>Query</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Triggers_to_Disable__c</fullName>
        <label>Triggers to Disable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Query__c</fullName>
        <label>Second Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>APTS_Batch_Job</label>
    <listViews>
        <fullName>APTS_ActivateAgreementBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Triggers_to_Disable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_ActivateAgreementBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APTS_ActivateAgreementBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_CERRecordsGenerationBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_CERRecordsGenerationBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APTS_CERRecordsGenerationBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_InActivateAssetLineItemsBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_InActivateAssetLineItemsBatchHelper</value>
        </filters>
        <label>APTS_InActivateAssetLineItemsBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_LineItemAdjustmentAPIBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_LineItemAdjustmentAPIBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APTS_LineItemAdjustmentAPIBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_LineItemsPricingBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <columns>APTS_Triggers_to_Disable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_LineItemsPricingBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APTS_LineItemsPricingBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_ProductConfigFinalizeBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <columns>APTS_Triggers_to_Disable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>equals</operation>
            <value>APTS_ProductConfigFinalizeBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APTS_ProductConfigFinalizeBatchHelper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActivationWithOutLines</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>APTS_Batch_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>ActivationWithOutLines</value>
        </filters>
        <label>ActivationWithOutLines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AssetRollup</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>_AssetRollup</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AssetRollup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bareca</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Bareca</value>
        </filters>
        <label>Bareca</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BillingScheiduleBatchHelper</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Query__c</columns>
        <columns>Second_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>contains</operation>
            <value>APTS_GenerateBillingScheiduleBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>SmallAgrmt</value>
        </filters>
        <label>BillingScheiduleBatchHelper-Small</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BillingScheiduleBatchHelper_Large</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Query__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Batch_Class_Name__c</field>
            <operation>contains</operation>
            <value>APTS_GenerateBillingScheiduleBatchHelper</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DeveloperName</field>
            <operation>notEqual</operation>
            <value>NLG_BillingScheiduleLargeAgrmt_Bucket_10</value>
        </filters>
        <label>BillingScheiduleBatchHelper-Large</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BillingSchieuldeInvoiced</fullName>
        <columns>MasterLabel</columns>
        <columns>APTS_Control__c</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Invoiced</value>
        </filters>
        <filters>
            <field>APTS_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BillingSchieuldeInvoiced</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAD</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>APTS_Control__c</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>CAD</value>
        </filters>
        <label>CAD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAD_m</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>APTS_Primary__c</columns>
        <columns>APTS_Batch_Class_Name__c</columns>
        <columns>APTS_Batch_Size__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Next_Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>CAD</value>
        </filters>
        <label>CAD</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>APTS Batch Jobs</pluralLabel>
</CustomObject>